Styled results page so that background and font colors match those of separate pages Created reset button Added not-found component to avoid error message Removed whitespace

--- a/src/src-frontend/Components/Hero/Hero.css
+++ b/src/src-frontend/Components/Hero/Hero.css
@@ -8,6 +8,10 @@
   box-sizing: border-box;
 }
 
+/* .wrapper.logo-img {
+  width: 1%;
+} */
+
 .wrapper p {
   font-family: "Shojumaru", cursive;
   font-size: 3em;
